--- a/Step3_Generate_Clssifier_GridSearch_with_HOG_Captcha.ipynb
+++ b/Step3_Generate_Clssifier_GridSearch_with_HOG_Captcha.ipynb
@@ -47,8 +47,7 @@
    "outputs": [],
    "source": [
     "features = np.array(features, 'int16')\n",
-    "labels = np.array(labels, 'int')\n",
-    "labels = labels.ravel()"
+    "labels = np.array(labels, 'int')"
    ]
   },
   {
