--- a/Step3_Generate_Clssifier_GridSearch_with_MNIST.ipynb
+++ b/Step3_Generate_Clssifier_GridSearch_with_MNIST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "escape time :  0.442 s\n"
+      "escape time :  0.457 s\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -425,6 +425,24 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 16 candidates, totalling 48 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done   1 jobs       | elapsed: 11.7min\n",
+      "[Parallel(n_jobs=-1)]: Done  42 out of  48 | elapsed: 446.3min remaining: 63.8min\n",
+      "[Parallel(n_jobs=-1)]: Done  48 out of  48 | elapsed: 553.4min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "escape time :  33658.405 s\n",
+      "best score is 0.986310713493\n",
+      "best parameter is {'C': 10.0, 'gamma': 0.03125}\n"
      ]
     }
    ],
@@ -438,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -446,10 +464,10 @@
     {
      "data": {
       "text/plain": [
-       "['./pkl/hog/skt/digits_SVC.pkl']"
+       "['./pkl/scale/mnist/digits_SVC.pkl']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -472,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -488,18 +506,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done   1 jobs       | elapsed:    1.7s\n",
-      "[Parallel(n_jobs=-1)]: Done   6 out of  12 | elapsed:    4.5s remaining:    4.5s\n",
-      "[Parallel(n_jobs=-1)]: Done  12 out of  12 | elapsed:    9.1s finished\n"
+      "[Parallel(n_jobs=-1)]: Done   1 jobs       | elapsed:  1.9min\n",
+      "[Parallel(n_jobs=-1)]: Done   6 out of  12 | elapsed:  4.0min remaining:  4.0min\n",
+      "[Parallel(n_jobs=-1)]: Done  12 out of  12 | elapsed:  6.2min finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "escape time :  11.406 s\n",
-      "best score is 0.9174\n",
-      "best parameter is {'C': 100.0}\n"
+      "escape time :  507.943 s\n",
+      "best score is 0.913613146791\n",
+      "best parameter is {'C': 10.0}\n"
      ]
     }
    ],
@@ -513,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -521,10 +539,10 @@
     {
      "data": {
       "text/plain": [
-       "['./pkl/hog/skt/digits_LinearSVC.pkl']"
+       "['./pkl/scale/mnist/digits_LinearSVC.pkl']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -552,19 +570,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done   1 jobs       | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=-1)]: Done   3 out of   9 | elapsed:    0.5s remaining:    0.9s\n",
-      "[Parallel(n_jobs=-1)]: Done   9 out of   9 | elapsed:    1.5s finished\n"
+      "[Parallel(n_jobs=-1)]: Done   1 jobs       | elapsed:  1.1min\n",
+      "[Parallel(n_jobs=-1)]: Done   9 out of   9 | elapsed:  6.0min finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done in 2.104s\n",
-      "best score: 0.920\n",
+      "done in 396.757s\n",
+      "best score: 0.928\n",
       "LOGISTIC REGRESSION PARAMETERS\n",
-      "\t C: 100.000000\n"
+      "\t C: 1.000000\n"
      ]
     }
    ],
@@ -588,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -596,23 +613,23 @@
     {
      "data": {
       "text/plain": [
-       "['./pkl/hog/skt/digits_LogisticRegression.pkl']"
+       "['./pkl/scale/mnist/digits_LogisticRegression.pkl']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# clf = LogisticRegression(C = 100.0)\n",
-    "# clf.fit(hog_features, labels)\n",
-    "# joblib.dump(clf, \"./pkl/scale/mnist/digits_LogisticRegression.pkl\", compress=3)"
+    "clf = LogisticRegression(C = 1.0)\n",
+    "clf.fit(features, labels)\n",
+    "joblib.dump(clf, \"./pkl/scale/mnist/digits_LogisticRegression.pkl\", compress=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -629,11 +646,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done   1 jobs       | elapsed:    2.8s\n",
-      "[Parallel(n_jobs=-1)]: Done  50 jobs       | elapsed:  2.1min\n",
-      "[Parallel(n_jobs=-1)]: Done 200 jobs       | elapsed:  9.5min\n",
-      "[Parallel(n_jobs=-1)]: Done 237 out of 243 | elapsed: 11.6min remaining:   17.6s\n",
-      "[Parallel(n_jobs=-1)]: Done 243 out of 243 | elapsed: 12.4min finished\n"
+      "[Parallel(n_jobs=-1)]: Done   1 jobs       | elapsed:  1.7min\n",
+      "[Parallel(n_jobs=-1)]: Done  50 jobs       | elapsed: 109.5min\n",
+      "[Parallel(n_jobs=-1)]: Done 200 jobs       | elapsed: 481.2min\n",
+      "[Parallel(n_jobs=-1)]: Done 237 out of 243 | elapsed: 577.6min remaining: 14.6min\n",
+      "[Parallel(n_jobs=-1)]: Done 243 out of 243 | elapsed: 610.0min finished\n"
      ]
     },
     {
@@ -641,13 +658,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "done in 749.621s\n",
-      "best score: 0.840\n",
+      "done in 37656.420s\n",
+      "best score: 0.965\n",
       "RBM + LOGISTIC REGRESSION PARAMETERS\n",
-      "\t logistic__C: 100.000000\n",
-      "\t rbm__learning_rate: 0.001000\n",
+      "\t logistic__C: 10.000000\n",
+      "\t rbm__learning_rate: 0.010000\n",
       "\t rbm__n_components: 200.000000\n",
-      "\t rbm__n_iter: 20.000000\n"
+      "\t rbm__n_iter: 80.000000\n"
      ]
     }
    ],
@@ -684,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -693,45 +710,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[BernoulliRBM] Iteration 1, pseudo-likelihood = -7.81, time = 0.32s\n",
-      "[BernoulliRBM] Iteration 2, pseudo-likelihood = -7.36, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 3, pseudo-likelihood = -6.94, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 4, pseudo-likelihood = -7.01, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 5, pseudo-likelihood = -6.89, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 6, pseudo-likelihood = -6.86, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 7, pseudo-likelihood = -6.95, time = 0.35s\n",
-      "[BernoulliRBM] Iteration 8, pseudo-likelihood = -6.64, time = 0.35s\n",
-      "[BernoulliRBM] Iteration 9, pseudo-likelihood = -6.96, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 10, pseudo-likelihood = -6.94, time = 0.35s\n",
-      "[BernoulliRBM] Iteration 11, pseudo-likelihood = -6.85, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 12, pseudo-likelihood = -6.62, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 13, pseudo-likelihood = -6.83, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 14, pseudo-likelihood = -6.97, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 15, pseudo-likelihood = -6.95, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 16, pseudo-likelihood = -6.87, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 17, pseudo-likelihood = -6.83, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 18, pseudo-likelihood = -6.95, time = 0.34s\n",
-      "[BernoulliRBM] Iteration 19, pseudo-likelihood = -6.96, time = 0.35s\n",
-      "[BernoulliRBM] Iteration 20, pseudo-likelihood = -6.86, time = 0.34s\n"
+      "[BernoulliRBM] Iteration 1, pseudo-likelihood = -115.42, time = 15.11s\n",
+      "[BernoulliRBM] Iteration 2, pseudo-likelihood = -99.54, time = 15.35s\n",
+      "[BernoulliRBM] Iteration 3, pseudo-likelihood = -91.00, time = 15.21s\n",
+      "[BernoulliRBM] Iteration 4, pseudo-likelihood = -86.31, time = 15.18s\n",
+      "[BernoulliRBM] Iteration 5, pseudo-likelihood = -85.49, time = 15.25s\n",
+      "[BernoulliRBM] Iteration 6, pseudo-likelihood = -83.11, time = 15.22s\n",
+      "[BernoulliRBM] Iteration 7, pseudo-likelihood = -80.92, time = 15.20s\n",
+      "[BernoulliRBM] Iteration 8, pseudo-likelihood = -77.90, time = 15.21s\n",
+      "[BernoulliRBM] Iteration 9, pseudo-likelihood = -79.70, time = 15.22s\n",
+      "[BernoulliRBM] Iteration 10, pseudo-likelihood = -75.76, time = 15.19s\n",
+      "[BernoulliRBM] Iteration 11, pseudo-likelihood = -76.44, time = 15.22s\n",
+      "[BernoulliRBM] Iteration 12, pseudo-likelihood = -77.50, time = 15.21s\n",
+      "[BernoulliRBM] Iteration 13, pseudo-likelihood = -76.86, time = 15.21s\n",
+      "[BernoulliRBM] Iteration 14, pseudo-likelihood = -76.16, time = 15.20s\n",
+      "[BernoulliRBM] Iteration 15, pseudo-likelihood = -75.68, time = 15.22s\n",
+      "[BernoulliRBM] Iteration 16, pseudo-likelihood = -74.08, time = 15.21s\n",
+      "[BernoulliRBM] Iteration 17, pseudo-likelihood = -73.65, time = 15.23s\n",
+      "[BernoulliRBM] Iteration 18, pseudo-likelihood = -72.68, time = 15.19s\n",
+      "[BernoulliRBM] Iteration 19, pseudo-likelihood = -73.84, time = 15.23s\n",
+      "[BernoulliRBM] Iteration 20, pseudo-likelihood = -73.24, time = 15.23s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['./pkl/hog/skt/digits_LogisticRegression_BernoulliRBM.pkl']"
+       "['./pkl/scale/mnist/digits_LogisticRegression_BernoulliRBM.pkl']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# rbm = BernoulliRBM(n_components = 200, n_iter = 20, learning_rate = 0.001,  verbose = True)\n",
-    "# logistic = LogisticRegression(C = 100.0)\n",
-    "# classifier = Pipeline([(\"rbm\", rbm), (\"logistic\", logistic)])\n",
-    "# classifier.fit(hog_features, labels)\n",
-    "# joblib.dump(classifier, \"./pkl/scale/mnist/digits_LogisticRegression_BernoulliRBM.pkl\", compress=3)"
+    "rbm = BernoulliRBM(n_components = 200, n_iter = 20, learning_rate = 0.01,  verbose = True)\n",
+    "logistic = LogisticRegression(C = 10.0)\n",
+    "classifier = Pipeline([(\"rbm\", rbm), (\"logistic\", logistic)])\n",
+    "classifier.fit(features, labels)\n",
+    "joblib.dump(classifier, \"./pkl/scale/mnist/digits_LogisticRegression_BernoulliRBM.pkl\", compress=3)"
    ]
   }
  ],
