--- a/Step1_Get_Captcha_Image.ipynb
+++ b/Step1_Get_Captcha_Image.ipynb
@@ -817,6 +817,140 @@
     "print \"First image is %s \" %labels[2]\n",
     "print \"Second image is %s\" %labels[3]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the number of files was 1200\n",
+      "the number of files is 1000\n",
+      "escape time :  73.561 s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dikien/anaconda/lib/python2.7/site-packages/skimage/util/dtype.py:107: UserWarning: Possible precision loss when converting from float64 to uint8\n",
+      "  \"%s to %s\" % (dtypeobj_in, dtypeobj))\n"
+     ]
+    }
+   ],
+   "source": [
+    "t0 = time()\n",
+    "features = []\n",
+    "lables = []\n",
+    "\n",
+    "md5list_1 = glob(os.path.join(\"./data_test//\" + \"*.png\"))\n",
+    "md5list = glob(os.path.join(\"./data_label/\" + \"*.png\")) + md5list_1\n",
+    "print \"the number of files was %s\" %len(md5list)\n",
+    "\n",
+    "# captcha를 preprossing후 mnist처럼 numpy array로 만들자\n",
+    "for fname in md5list:\n",
+    "    lable = os.path.split(fname)[1].split(\"_\")[1][:5]\n",
+    "    im = io.imread(fname)\n",
+    "    w, h, _ = im.shape\n",
+    "\n",
+    "    for x in range(w):\n",
+    "        for j in range(h):\n",
+    "\n",
+    "            if im[x][j][0] == im[x][j][1] and im[x][j][1] == im[x][j][2] and im[x][j][2] == im[x][j][0]:\n",
+    "                im[x][j][0] = 255\n",
+    "                im[x][j][1] = 255\n",
+    "                im[x][j][2] = 255\n",
+    "\n",
+    "    im_gray = rgb2gray(im)\n",
+    "    im_gray = img_as_ubyte(im_gray)\n",
+    "    im_gray = morphology.opening(im_gray, square(2))\n",
+    "    im_gray_equalize = exposure.equalize_hist(im_gray)\n",
+    "\n",
+    "    threshold = filters.threshold_otsu(im_gray_equalize).copy()\n",
+    "    threshold = im_gray_equalize < threshold\n",
+    "    threshold = img_as_ubyte(threshold)\n",
+    "\n",
+    "    bw = morphology.closing(im_gray_equalize < threshold, square(3))\n",
+    "    cleared = bw.copy()\n",
+    "\n",
+    "    im_th = cleared\n",
+    "    ctrs, hier = cv2.findContours(img_as_ubyte(im_th.copy()), cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "    rects = [cv2.boundingRect(ctr) for ctr in ctrs]\n",
+    "    rects = sorted(rects, key=lambda tup: tup[0])\n",
+    "\n",
+    "    if len(rects) != 5:\n",
+    "        continue\n",
+    "\n",
+    "\n",
+    "    for rect, l in zip(rects, lable):\n",
+    "        # Draw the rectangles\n",
+    "        cv2.rectangle(threshold, (rect[0], rect[1]), (rect[0] + rect[2], rect[1] + rect[3]), (0, 255, 0), 1) \n",
+    "\n",
+    "        # Make the rectangular region around the digit\n",
+    "        roi = threshold[rect[1]:rect[1]+rect[3], rect[0]:rect[0]+rect[2]]\n",
+    "        roi = cv2.resize(roi, (28, 28), interpolation=cv2.INTER_AREA)\n",
+    "        roi = morphology.closing(roi, square(4))\n",
+    "        \n",
+    "        features.append(roi.ravel())\n",
+    "        lables.append([l])\n",
+    "\n",
+    "features = np.array(features, 'int16')\n",
+    "labels = np.array(lables, 'int').ravel()\n",
+    "md5list = glob(os.path.join(\"./data_label/\" + \"*.png\"))\n",
+    "print \"the number of files is %s\" %len(md5list)\n",
+    "print \"escape time : \", round(time()-t0, 3), \"s\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6000, 784)\n",
+      "(6000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# features, lables의 차원을 출력\n",
+    "print features.shape\n",
+    "print labels.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./mldata/lables_1200.mat']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# features, lables을 각각 저장\n",
+    "joblib.dump(features, \"./mldata/features_1200.mat\", compress=3)\n",
+    "joblib.dump(labels, \"./mldata/lables_1200.mat\", compress=3)"
+   ]
   }
  ],
  "metadata": {
