--- a/Step1_Get_Captcha_Image.ipynb
+++ b/Step1_Get_Captcha_Image.ipynb
@@ -951,6 +951,228 @@
     "joblib.dump(features, \"./mldata/features_1200.mat\", compress=3)\n",
     "joblib.dump(labels, \"./mldata/lables_1200.mat\", compress=3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def scale(X, eps = 0.001):\n",
+    "    # scale the data points s.t the columns of the feature space\n",
+    "    # (i.e the predictors) are within the range [0, 1]\n",
+    "    return (X - np.min(X, axis = 0)) / (np.max(X, axis = 0) + eps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 640.,  921.,  616.,  593.,  739.,  619.,  370.,  840.,  662.]),\n",
+       " array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]),\n",
+       " <a list of 9 Patch objects>)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": [
+       "iVBORw0KGgoAAAANSUhEUgAAAj0AAAGKCAYAAADntvBRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
+       "AAALEgAACxIB0t1+/AAAHvBJREFUeJzt3Xu0ZGV55/Hvj0aBiFyGxG4jCZcVlWC8MoxiuIhRYszE\n",
+       "uEw0yMCAZBwioEHDEkHQRhQMyYImSMYwCxVxRLzEYDBGQKExAqKEoCIEEmkjKN3c0uEahH7mj71b\n",
+       "i7K7OdJVp6rr/X7WOuucevdT+zy7T8P59X7fvXeqCkmSpFm30aQbkCRJmg+GHkmS1ARDjyRJaoKh\n",
+       "R5IkNcHQI0mSmmDokSRJTTD0SJKkJsxr6EmyZ5LPJbklyaokB66hZnGSW5Pcn+SSJDsPbd8kyelJ\n",
+       "bk9yb5LzkzxtqGbrJOck+ff+46NJthz38UmSpOk132d6ngR8E/hj4AHgUXdGTHIU8DbgcGBXYAVw\n",
+       "UZLNB8qWAK8B9gX2ALYALkgyeCwfB54H/CbwCuAFwDljOB5JkrSByKTuyJzkHuCwqvpo/zrAD4C/\n",
+       "qKqT+rFN6YLPkVV1Zn+2ZgVwUFWd29dsC3wP+K2qujDJrwLXAb9eVVf0Nb8OfAXYqapunNcDlSRJ\n",
+       "U2Ga1vTsACwELlw9UFUPApcBL+6HdgGeMFRzC3A9sFs/tBtw7+rA07scuG+gRpIkNWaaQs+i/vPy\n",
+       "ofEVA9sWAY9U1Z1DNcuHam4f3Fjd6azB/UiSpMZMU+hZl8eag8u8dCFJkjZYG0+6gQG39Z8XArcM\n",
+       "jC8c2HYbsCDJNkNnexYCSwdqfmFwx/16oacM7GdwWwHHDwxdWlWXPs5jkCRJU2qaQs/NdKFkH+Bq\n",
+       "+PFC5t2BI/uaq4Ef9TWDC5l3olu3A3AFsHmS3QbW9exGd+XY6ppHqarFIz4WSZI0ZeY19CR5EvD0\n",
+       "/uVGwHZJngfcWVXfT7IEOCbJDcBNwLHAPXSXoFNVK5OcBZycZAVwF3AKcC1wcV9zfZK/B/4qyf+m\n",
+       "m/r6K+Bvq+qm+TpWSZI0Xeb1kvUkLwG+3L8sfrIW5yNVdXBf827gEGBr4Eq6y9q/M7CPJwJ/DuwH\n",
+       "bEYXdg6tqlsHarYCTgde1Q+dDxxeVf+xhp6qqlwTJEnSjJvYfXqmhaFHkqQ2bChXb0mSJK0XQ48k\n",
+       "SWqCoUeSJDXB0CNJkppg6JEkSU0w9EiSpCYYeiRJUhMMPZIkqQmGHkmS1ARDjyRJaoKhR5IkNcHQ\n",
+       "I0mSmmDokSRJTTD0SJKkJhh6JElSEww9kiSpCYYeSZLUBEOPJElqgqFHkiQ1wdAjSZKaYOiRJElN\n",
+       "2HjSDWi8ktSkexi3qsqke5AkTT9DTwP2OuC4SbcwNkvPOWHSLUiSNhBOb0mSpCYYeiRJUhMMPZIk\n",
+       "qQmGHkmS1ARDjyRJaoKhR5IkNcHQI0mSmmDokSRJTTD0SJKkJhh6JElSEww9kiSpCYYeSZLUBEOP\n",
+       "JElqgqFHkiQ1wdAjSZKaYOiRJElNMPRIkqQmGHokSVITDD2SJKkJhh5JktQEQ48kSWqCoUeSJDXB\n",
+       "0CNJkppg6JEkSU0w9EiSpCYYeiRJUhM2nnQDkiRNmyQ16R7Graoy6R7mm6FHkqQ12OuA4ybdwtgs\n",
+       "PeeESbcwEU5vSZKkJhh6JElSEww9kiSpCYYeSZLUBEOPJElqwtSFniQbJzkxyXeTPNB/PiHJgqG6\n",
+       "xUluTXJ/kkuS7Dy0fZMkpye5Pcm9Sc5P8rT5PRpJkjQtpi70AMcAhwBvBp4J/DFwKHD06oIkRwFv\n",
+       "Aw4HdgVWABcl2XxgP0uA1wD7AnsAWwAXJJnGY5YkSWM2jffp2RX4XFV9vn/9b0kuAF4IkCTAEcBJ\n",
+       "VfXZfuxAuuCzH3Bmki2Bg4GDqupLfc0BwPeAlwEXzuPxSJKkKTCNZz2+ALw0yTMB+mmrvYHVIWgH\n",
+       "YCEDwaWqHgQuA17cD+0CPGGo5hbg+oEaSZLUkKk701NVf5lkW+D6JA/T9fjeqvpgX7Ko/7x86K0r\n",
+       "gF8cqHmkqu4cqllOF5gkSVJjpi70JHkL8Aa6tTjXAc8HTkuyrKo+9Bhvn/lnpUiSpMdn6kIP8E66\n",
+       "Mzuf7F9fl2Q7uoXMHwJu68cXArcMvG/hwLbbgAVJthk627OIbhrsUZIsHnh5aVVdur4HIUmSpss0\n",
+       "hp4Aq4bGVvXjADfThZp9gKsBkmwK7A4c2ddcDfyorzm3r9kW2Am4fPgbVtXiUR6AJEmaPtMYev4G\n",
+       "eEeSm4Hv0E1vvRU4G6CqKskS4JgkNwA3AccC9wAf72tWJjkLODnJCuAu4BTgWuDieT4eSZI0BaYx\n",
+       "9LwV+A/gDLopqx8CZwLvWV1QVScn2ayv2Rq4Etinqu4b2M8RwMPAecBmdGFn/6py3Y8kSQ2autDT\n",
+       "B5cj+clU1drqjgeOX8f2h4C39B+SJKlx03ifHkmSpJEz9EiSpCYYeiRJUhMMPZIkqQmGHkmS1ARD\n",
+       "jyRJaoKhR5IkNcHQI0mSmmDokSRJTTD0SJKkJhh6JElSEww9kiSpCYYeSZLUBEOPJElqgqFHkiQ1\n",
+       "YeNJNyCpTUlq0j2MW1Vl0j1I+glDj6SJ2euA4ybdwtgsPeeESbcgaYjTW5IkqQmGHkmS1ARDjyRJ\n",
+       "aoKhR5IkNcHQI0mSmmDokSRJTTD0SJKkJhh6JElSEww9kiSpCYYeSZLUBEOPJElqgqFHkiQ1wdAj\n",
+       "SZKaYOiRJElNMPRIkqQmGHokSVITDD2SJKkJhh5JktQEQ48kSWqCoUeSJDXB0CNJkppg6JEkSU0w\n",
+       "9EiSpCYYeiRJUhM2nnQDkiRp/iWpSfcwDlWVtW0z9EiS1KC9Djhu0i3MO6e3JElSEww9kiSpCYYe\n",
+       "SZLUBEOPJElqgqFHkiQ1wau3gGy00cOT7kGSJI2XoQfY4/XvWDDpHsbhX77+xYd+eNM/zuSxSZL0\n",
+       "szL0ABstmM0/hmzk7KUkSav5W1GSJDXB0CNJkppg6JEkSU0w9EiSpCYYeiRJUhOmMvQkeWqSs5Os\n",
+       "SPJAkuuS7DlUszjJrUnuT3JJkp2Htm+S5PQktye5N8n5SZ42v0ciqWVJapY/Jv3nK/2spu5a7SRb\n",
+       "AV8FLgNeCdwO7AisGKg5CngbcCBwI/Au4KIkz6yqe/uyJcCrgH2Bu4BTgAuS7FJVq+bpcDQPZv1/\n",
+       "vlWVSfegx2evA46bdAtjs/ScEybdgvQzm7rQA7wduLWqDhoY+97qL5IEOAI4qao+248dSBeK9gPO\n",
+       "TLIlcDBwUFV9qa85oN/Py4AL5+E4NE/8xSJJmotpnN56NXBVkvOSLE9yTZLDBrbvACxkILhU1YN0\n",
+       "Z4Ze3A/tAjxhqOYW4PqBGkmS1JBpDD07AocC/wLsA5wGvH8g+CzqPy8fet+KgW2LgEeq6s6hmuV0\n",
+       "gUmSJDVmGqe3NgKuqqp39q+vTfJ04DDgjMd470yv7ZAkSY/fNIaeHwDfGRq7Afjl/uvb+s8LgVsG\n",
+       "ahYObLsNWJBkm6GzPYvopsEeZdm1S3/89VYLt2OrRds/3t4lSdKUmsbQ81Vgp6GxZwDL+q9vpgs1\n",
+       "+wBXAyTZFNgdOLKvuRr4UV9zbl+zbb/fy4e/4fbP3WuU/UuSpCk0jaHnVODyJMcAnwSeD7wZOBqg\n",
+       "qirJEuCYJDcANwHHAvcAH+9rViY5Czg5yQp+csn6tcDF83w80nqZ9UvyJWm+TF3oqapvJHk1cCJw\n",
+       "HN1l5sdW1f8ZqDk5yWZ0a3y2Bq4E9qmq+wZ2dQTwMHAesBld2Nm/qvwFog3KrF6S7+X4kubb1IUe\n",
+       "gKr6O+DvHqPmeOD4dWx/CHhL/yFJkho3jZesS5IkjZyhR5IkNcHQI0mSmmDokSRJTTD0SJKkJhh6\n",
+       "JElSE+YUepLsmeTJa9m2eZI9R9uWJEnSaM31TM+lwK+uZdtOwCUj6UaSJGlMRjG9tQmwagT7kSRJ\n",
+       "Gpu13pE5yQ7ADkD6oV2TbD5Uthnwh8C/jac9SZKk0VjXYygOBN418Pr0tdQ9DBw+so4kSZLGYF2h\n",
+       "5yN0a3kAvgwcBlw/VPOfwI1VdefIO5MkSRqhtYaeqloGLANI8lLg6qq6Z37akiRJGq05PWW9qi4d\n",
+       "cx+SJEljNdf79GySZHGSf07yQJJVQx+PjLtRSZKk9TGnMz3AyXRrer4A/DXdWp5BNcqmJEmSRm2u\n",
+       "oef3gcVV9d5xNiNJkjQuc7054ebA5eNsRJIkaZzmGnouAHy+liRJ2mDNdXrrL4BzkhTweeCu4YKq\n",
+       "+u4oG5MkSRqluYaeK/rP7+4/hhWwYCQdSZIkjcFcQ8/BY+1CkiRpzOZ6c8KPjLkPSZKksZrrQmZJ\n",
+       "kqQN2pzO9CT5MGu/AWGAqiqnwCRJ0tSa65qevXl06AnwX+ju37MS+PcR9yVJkjRSc13Ts/2axpPs\n",
+       "CXwQ2H+EPUmSJI3ceq3pqarLgFPp7uMjSZI0tUaxkPlm4AUj2I8kSdLYrFfoSfIE4EDgltG0I0mS\n",
+       "NB5zvXrrEn766q1NgGcA2wB/NOK+JEmSRmquV29l6DPAPcBngE9U1aWjbEqSJGnU5nr11kvG3Ick\n",
+       "SdJYeUdmSZLUhDmHniTPSfKZJHckeSTJ7Uk+leTZ42xQkiRpFOa6kHlXYCnwAPA5YDmwCPgd4JVJ\n",
+       "9qqqb4ytS0mSpPU014XMJwHfBn6jqu5ZPZjkycDF/faXj749SZKk0Zjr9NaLgPcPBh6A/vWfAruN\n",
+       "ujFJkqRRmmvoWdsT1ue6XZIkaaLmGnq+BhydZIvBwSSbA0cBV466MUmSpFGa65qeY+gWMi9LcgHw\n",
+       "Q+CpwCuBnwNeMpbuJEmSRmSuNye8KskLgXcBrwC2Bu4CvgycUFXfGl+LkiRJ62+toSfJRsBvA8uq\n",
+       "6ltV9U3g94dqng1sn+TbVeW6HkmSNLXWtabnfwCfoHvG1trcC5wLvH6UTUmSJI3aukLPAcCHq2rZ\n",
+       "2gqq6mbgLOB/jrgvSZKkkVpX6HkB8MU57ONLwK6jaUeSJGk81hV6ngzcPYd93N3XSpIkTa11hZ47\n",
+       "gO3msI9f6mslSZKm1rpCz1eBA+ewj4OAfxhJN5IkSWOyrtBzKvAbSZYkeeLwxiRPTLIE+I2+VpIk\n",
+       "aWqt9T49VXVFkj8BTgH2S3Ih8L1+83bAPsA2wNuq6oqxdypJkrQe1nlH5qpakuQf6Z6v9Rpg037T\n",
+       "A8CldE9e/8pYO5QkSRqBx3wMRVVdBlyWZAHw8/3wnVX18Fg7kyRJGqG5PnCUqnoEWD7GXiRJksZm\n",
+       "XQuZJUmSZoahR5IkNWGqQ0+So5OsSnL60PjiJLcmuT/JJUl2Htq+SZLTk9ye5N4k5yd52vx2L0mS\n",
+       "psnUhp4kLwLeCHwTqIHxo4C3AYfTPfNrBXBRks0H3r6E7mqzfYE9gC2AC5JM7fFKkqTxmsoQkGRL\n",
+       "4GPAGxh4/leSAEcAJ1XVZ6vqOrq7Rj8Z2G/gvQcDR1bVl6rqGronxj8HeNm8HogkSZoaUxl6gDOB\n",
+       "T1XVUiAD4zsAC4ELVw9U1YPAZcCL+6FdgCcM1dwCXD9QI0mSGjPnS9bnS5I3AjvSn7lhYGoLWNR/\n",
+       "Hr50fgXwiwM1j1TVnUM1y+kCkyRJatBUhZ4kzwTeB+ze3xcIujM9Wfu7fqweu0SSJLVqqkIPsBvd\n",
+       "XZ+v65bvALAA2CPJIcCv9WMLgVsG3rcQuK3/+jZgQZJths72LKKbBvspy65d+uOvt1q4HVst2n79\n",
+       "jkKSJE2daQs9nwWuGngd4MPAjcCJwE10oWYf4GqAJJsCuwNH9u+5GvhRX3NuX7MtsBNw+Zq+6fbP\n",
+       "3WvEhyFJkqbNVIWeqloJrBwcS3I/cHdVfad/vQQ4JskNdCHoWOAe4OOr95HkLODkJCuAu+ieFH8t\n",
+       "cPF8HYskSZouUxV61qIYWK9TVScn2Qw4A9gauBLYp6ruG3jPEcDDwHnAZnRhZ/+qct2PJEmNmvrQ\n",
+       "U1V7r2HseOD4dbznIeAt/YckSdLU3qdHkiRppAw9kiSpCYYeSZLUBEOPJElqgqFHkiQ1Yeqv3pIk\n",
+       "Tack3gZEGxRDjyTpcdnrgOMm3cLYLD3nhEm3oDFwekuSJDXB0CNJkppg6JEkSU0w9EiSpCYYeiRJ\n",
+       "UhMMPZIkqQmGHkmS1ARDjyRJaoKhR5IkNcHQI0mSmmDokSRJTTD0SJKkJhh6JElSEww9kiSpCYYe\n",
+       "SZLUBEOPJElqgqFHkiQ1wdAjSZKaYOiRJElNMPRIkqQmGHokSVITDD2SJKkJhh5JktQEQ48kSWqC\n",
+       "oUeSJDXB0CNJkppg6JEkSU0w9EiSpCYYeiRJUhMMPZIkqQmGHkmS1ARDjyRJaoKhR5IkNcHQI0mS\n",
+       "mmDokSRJTTD0SJKkJhh6JElSEww9kiSpCYYeSZLUBEOPJElqgqFHkiQ1wdAjSZKaYOiRJElNMPRI\n",
+       "kqQmGHokSVITDD2SJKkJhh5JktQEQ48kSWqCoUeSJDVh6kJPkqOTfD3JyiQrknwuybPWULc4ya1J\n",
+       "7k9ySZKdh7ZvkuT0JLcnuTfJ+UmeNn9HIkmSpsnUhR5gL+ADwG7AS4GHgYuTbL26IMlRwNuAw4Fd\n",
+       "gRXARUk2H9jPEuA1wL7AHsAWwAVJpvGYJUnSmG086QaGVdUrBl8nOQBYCbwY+HySAEcAJ1XVZ/ua\n",
+       "A+mCz37AmUm2BA4GDqqqLw3s53vAy4AL5+lwJEnSlNgQznpsQdfn3f3rHYCFDASXqnoQuIwuGAHs\n",
+       "AjxhqOYW4PqBGkmS1JANIfScBlwDXNG/XtR/Xj5Ut2Jg2yLgkaq6c6hmOV1gkiRJjZm66a1BSU6h\n",
+       "OzOze1XVHN4ylxpJktSgqQ09SU4FXgfsXVXLBjbd1n9eCNwyML5wYNttwIIk2wyd7VlENw32KMuu\n",
+       "Xfrjr7dauB1bLdp+fduXJElTZipDT5LTgNfSBZ4bhzbfTBdq9gGu7us3BXYHjuxrrgZ+1Nec29ds\n",
+       "C+wEXD78/bZ/7l6jPwhJkjRVpi70JDkD2B94NbAyyep1OvdU1X1VVUmWAMckuQG4CTgWuAf4OEBV\n",
+       "rUxyFnBykhXAXcApwLXAxfN7RJIkaRpMXegB3kS3NudLQ+OLgfcAVNXJSTYDzgC2Bq4E9qmq+wbq\n",
+       "j6C7x895wGZ0YWf/Oa4NkiRJM2bqQk9VzemKsqo6Hjh+HdsfAt7Sf0iSpMZtCJesS5IkrTdDjyRJ\n",
+       "aoKhR5IkNcHQI0mSmmDokSRJTTD0SJKkJhh6JElSEww9kiSpCYYeSZLUBEOPJElqgqFHkiQ1wdAj\n",
+       "SZKaYOiRJElNMPRIkqQmGHokSVITDD2SJKkJhh5JktQEQ48kSWqCoUeSJDXB0CNJkppg6JEkSU0w\n",
+       "9EiSpCYYeiRJUhMMPZIkqQmGHkmS1ARDjyRJaoKhR5IkNcHQI0mSmmDokSRJTTD0SJKkJhh6JElS\n",
+       "Eww9kiSpCYYeSZLUBEOPJElqgqFHkiQ1wdAjSZKaYOiRJElNMPRIkqQmGHokSVITDD2SJKkJhh5J\n",
+       "ktQEQ48kSWqCoUeSJDXB0CNJkppg6JEkSU0w9EiSpCYYeiRJUhMMPZIkqQmGHkmS1ARDjyRJaoKh\n",
+       "R5IkNcHQI0mSmmDokSRJTTD0SJKkJhh6JElSEww9kiSpCTMdepIcmuTmJA8k+UaS3SfdkyRJmoyZ\n",
+       "DT1J/gBYArwXeB5wOfCFJL800cYkSdJEzGzoAd4GfLiqzqqqf66qtwA/BN404b4kSdIEzGToSfJE\n",
+       "4AXAhUObLgRePP8dSZKkSZvJ0AP8PLAAWD40vgJYNP/tSJKkSdt40g1Mg2svPGflpHsYh/v/445N\n",
+       "Jt2DJEnTIlU16R5Grp/eug/Yt6o+MzB+BrBzVe09MDZ7fwCSJDWsqrKm8Zk801NVDyW5GtgH+MzA\n",
+       "ppcDnxqqXeMfjCRJmi0zGXp6pwDnJLmK7nL1P6Jbz/PBiXYlSZImYmZDT1V9Msk2wLHAU4FvAa+s\n",
+       "qu9PtjNJkjQJM7mmR5IkadisXrI+J7P6mIokeyb5XJJbkqxKcuCkexqVJEcn+XqSlUlW9Mf5rEn3\n",
+       "NSpJDktybX98K5NcnuSVk+5rXPqf56okp0+6l1FIsrg/nsGPH0y6r1FJ8tQkZ/f/7T2Q5Loke066\n",
+       "r1FIsmwNP7tVSS6YdG+jkGTjJCcm+W7/s/tukhOSLJh0b/Op2dAz44+peBLwTeCPgQeAWTqdtxfw\n",
+       "AWA34KXAw8DFSbaeaFej833g7cDzgV2ALwN/k+S5E+1qDJK8CHgj3d/VWfo7egPd+sHVH8+ebDuj\n",
+       "kWQr4Kt0P6tXAjsBh9Pd/2wW7MKjf24voDvW8ybZ1AgdAxwCvBl4Jt3vh0OBoyfZ1HxrdnorydeA\n",
+       "f6qqQwbGbgQ+XVXHTK6z0UpyD3BYVX100r2MQ5InASuB362qz0+6n3FIcifwjqr6v5PuZVSSbAlc\n",
+       "DfwhsBj4Vv+omA1aksXA71XVTASdQUlOBPaoqj0m3ct8SPJO4E+Ap1bVf066n/WV5G+BO6rqDQNj\n",
+       "ZwNbV9WrJtfZ/GryTI+PqZgpW9D9Pb570o2MWpIFSfYFNgUum3Q/I3Ym8KmqWgrM2m0jdkxyaz99\n",
+       "cG6SHSbd0Ii8GrgqyXlJlie5Jslhk25qHJKELpB/bBYCT+8LwEuTPBMgyc7A3sDfTbSreTazV289\n",
+       "Bh9TMTtOA64Brph0I6OS5Nl0x7MJ3fTk66rqnyfb1egkeSOwI7BfPzRLp5uvBA6km+JaSHf16OVJ\n",
+       "nlVVd020s/W3I910yCnAiXRTsKcnoarOmGhno/dyYHtgZs6uVtVfJtkWuD7Jw3S//99bVU3dxqXV\n",
+       "0KMZkOQUujNzu9dszdPeADwH2BJ4LfCJJHtX1Tcm29b66/+V+T66n9kjq4eZkbM9VfX3Ay+/neQK\n",
+       "4Ga6IHTqZLoamY2Aq6rqnf3ra5M8HTgMmLXQ80a6Y/3WpBsZlSRvAd4A7AtcRxdaT0uyrKo+NNHm\n",
+       "5lGroecO4BG6f4kNWgj8cP7b0c8qyanA64C9q2rZhNsZqar6EfDd/uU1SXal+8XyhrW/a4OxG92Z\n",
+       "1uu6GQSgO+u6R5JDgCf1xz8Tqur+JNcBvzLpXkbgB8B3hsZuAH55Ar2MTZKnAK+iO6s1S95Jd2bn\n",
+       "k/3r65JsR7eQuZnQ0+Sanqp6iG4R5T5Dm15OdxWXpliS04A/AF5aVTdOup95sIDZ+W/1s8CvAc/t\n",
+       "P54HfAM4F3jeLAUegCSbAr/KbPxj6qt0V2wNegawbP5bGauDgAfp/k7OkgCrhsZWMSNnWeeq1TM9\n",
+       "MMOPqeivaHp6/3IjYLskzwPu3NDvSN0/NHZ/ukWVK5OsXoN1T1XdN7nORiPJ+4ELgFuAJ9Ote9kL\n",
+       "eMUk+xqVqlpJd7XdjyW5H7i7qobPImxwkvw58Dm6Ww88BTgO2Aw4e5J9jcipdOuTjgE+STc98mZm\n",
+       "6JLnfgHz/wI+UVX3T7qfEfsb4B1JbqY7Y/d84K3Mxt/NOWv2knWAJG+iuyfK6sdUvLWq/mGyXa2/\n",
+       "JC+hu78LdItEVyf5j1TVwRNpakSSrOLRx7Ta4qp6zwRaGqkkH6a7omIRXTi4Fvizqrpooo2NUZJL\n",
+       "mJ1L1s8F9qSbwrudbkH6cVV1w0QbG5H+Rpkn0t3n5XvAB6rqA5PtanSS7A1cDLxwFtbQDer/MXw8\n",
+       "8Hv8ZCnHucB7+tmPJjQdeiRJUjtmZZ2AJEnSOhl6JElSEww9kiSpCYYeSZLUBEOPJElqgqFHkiQ1\n",
+       "wdAjSZKaYOiRNBWSHJRkVZId13M/lyb5yhzqFvc3u5TUCEOPpFk017uuendWqSGGHkkta+phi1Lr\n",
+       "DD2SNghJdk3y6STfT3J/khuSvK9/kvkayvO7Sb6d5MEk1yd57Ry+x8ZJju73/WCSW5P8eZJNhmpO\n",
+       "SPKvSR5IcnuSryT59ZEesKSRa/kp65I2LL9M9wDWs4F/B34NeBewI/D6odpfAU4D3g2sAA4FPpHk\n",
+       "9qq6dB3f42PAfwfeD1wO7AycAGwP/H5fcxRwBHAM8E/AlsAuwNbrc3CSxs/QI2mDUFWfAT4D3Wkc\n",
+       "uieY3wOcneTQqrp7oHwh8KKquqqv/yJwHfAeuqeg/5QkewCvAw6oqv/XD385yV3Ax5I8p6q+CewG\n",
+       "fLGqTh94+wWjOk5J4+P0lqQNQpItkvxpkn8FHgQeAj5Kty7nGUPl/7Y68ABU1Srg08B/W8e3eEW/\n",
+       "z7/up7A2TrIxcFG/fXVYugr47STvTbJ7kieu98FJmheGHkkbig8DhwBLgJcB/xU4rN+2yVDt8jW8\n",
+       "fznwxCS/sJb9PwV4InAfXfhZ/bGc7iqvbfq6E+mmzV4FXAbckeRDSbb5qT1KmipOb0maev1i5VcB\n",
+       "7x6cVkry3LW8ZdEaxhYCD1XV7Wt5z510Z5B2X8v2HwJU1cPAycDJSZ4C/A5wCvBzwL6PcSiSJsjQ\n",
+       "I2lDsAmwAHh4aPygtdT/UpIXVtXXAJIsAF4LfG0d3+MLwNuBrarqy3NpqqpWAGcl+W3gWXN5j6TJ\n",
+       "MfRImja/lWR4emolcCXwJ0l+SHdW5mDgF9eyj+XAeUneDdwBvInuiq5D1vZNq2ppknOBTyc5Bfg6\n",
+       "sIruyq3fAt5eVf+S5Hy6q7auAe4Gng/8JvDBx3GskuaRoUfStFh9d+TT17Dt23SXkn8QOAN4ADgP\n",
+       "+BDwt2vYz010U1AnAU8HbgZeX1VLh+qG78i8P/BmukD1TuA/gWXA39Nd+g6wlO6s0WF0U1rfA/4U\n",
+       "eN9cD1TSZKTKu7BLkqTZ59VbkiSpCYYeSZLUBEOPJElqgqFHkiQ1wdAjSZKaYOiRJElNMPRIkqQm\n",
+       "GHokSVITDD2SJKkJ/x+lRCME5uCgHwAAAABJRU5ErkJggg==\n"
+      ],
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10c31de50>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "features = joblib.load(\"./mldata/features_1200.mat\")\n",
+    "labels = joblib.load(\"./mldata/lables_1200.mat\")\n",
+    "\n",
+    "features = features.astype(\"float32\")\n",
+    "features = scale(features)\n",
+    "labels = np.array(labels, 'int')\n",
+    "\n",
+    "unique, counts = np.unique(labels, return_counts=True)\n",
+    "\n",
+    "plt.figure(figsize=(9, 6))\n",
+    "\n",
+    "# Remove the plot frame lines. They are unnecessary chartjunk.  \n",
+    "ax = plt.subplot(111)  \n",
+    "ax.spines[\"top\"].set_visible(False)  \n",
+    "ax.spines[\"right\"].set_visible(False)  \n",
+    "\n",
+    "# Ensure that the axis ticks only show up on the bottom and left of the plot.  \n",
+    "# Ticks on the right and top of the plot are generally unnecessary chartjunk.  \n",
+    "ax.get_xaxis().tick_bottom()  \n",
+    "ax.get_yaxis().tick_left()  \n",
+    "\n",
+    "# Make sure your axis ticks are large enough to be easily read.  \n",
+    "# You don't want your viewers squinting to read your plot.  \n",
+    "plt.xticks(unique, fontsize=14)  \n",
+    "plt.yticks(fontsize=14)  \n",
+    "\n",
+    "# Along the same vein, make sure your axis labels are large  \n",
+    "# enough to be easily read as well. Make them slightly larger  \n",
+    "# than your axis tick labels so they stand out.  \n",
+    "plt.xlabel(\"Lables\", fontsize=16)  \n",
+    "plt.ylabel(\"Count\", fontsize=16)\n",
+    "\n",
+    "ax.hist(labels, bins=range(10), cumulative=False, color=\"#3F5D7D\")"
+   ]
   }
  ],
  "metadata": {
